--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus iste aspernatur dicta dolore autem maiores harum. Sequi deserunt debitis tenetur minus nisi? Quo officiis labore dignissimos ut recusandae excepturi id.</p>
     </div>
 
+    <div class="footer">
+        <h1>CopryRight</h1>
+    </div>
+
     <script src="./script.js"></script>
     
 </body>
