--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus iste aspernatur dicta dolore autem maiores harum. Sequi deserunt debitis tenetur minus nisi? Quo officiis labore dignissimos ut recusandae excepturi id.</p>
     </div>
 
+    <nav>
+        <a href="#"> <img src="" alt="">LOGO</a>
+        <ul>
+            <li>Home</li>
+            <li>About Me</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+
     <div class="footer">
         <h1>CopryRight</h1>
     </div>
